[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgrid"
version = "0.1.0"
description = "Lightweight agent orchestration framework with tool calling and RAG support"
authors = [
    { name="Kerolos Emad" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "litellm",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["."]