[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgrid"
dynamic = ["version"]
# --- MOVE THESE HERE ---
description = "Lightweight agent orchestration framework with tool calling and local LLM support"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Kerolos Emad", email = "your.email@example.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
keywords = ["ai", "agents", "llm", "rag", "ollama", "local-llm", "tool-calling"]
dependencies = [
    "litellm>=1.82.2",
    "pydantic>=2.12.5",
    "fastmcp>=3.2.4"
]

[project.urls]
Homepage = "https://github.com/kerolos98/AgentGrid"
Repository = "https://github.com/kerolos98/AgentGrid"
"Bug Tracker" = "https://github.com/kerolos98/AgentGrid/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.setuptools_scm]
# ONLY keep scm-specific settings here
write_to = "agentgrid/_version.py"